src/test/ui/feature-gate-tool_attributes.stderr
error[E0658]: scoped attribute `rustfmt::skip` is experimental (see issue #44690)
  --> $DIR/feature-gate-tool_attributes.rs:12:5
   |
12 |     #[rustfmt::skip] //~ ERROR scoped attribute `rustfmt::skip` is experimental
   |     ^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(tool_attributes)] to the crate attributes to enable

error: aborting due to previous error

